# terstys

./: .gitignore  CMakeLists.txt  README.md  build_and_install.sh  main.c  main.cpp
.github/workflows/: build.yml
terstys/: CMakeLists.txt  terstys.c  terstys.h  terstysConfig.cmake
